@@ -1115,17 +1115,30 @@ i_tt_bbox_inst( TT_Fonthandle *handle, int inst ,const char *txt, int len, int c
   for ( i = 0; i < len; ++i ) {
     j = ustr[i];
     if ( i_tt_get_glyph(handle,inst,j) ) {
-      width += handle->instanceh[inst].gmetrics[j].advance   / 64;
-      casc   = handle->instanceh[inst].gmetrics[j].bbox.yMax / 64;
-      cdesc  = handle->instanceh[inst].gmetrics[j].bbox.yMin / 64;
+      TT_Glyph_Metrics *gm = handle->instanceh[inst].gmetrics + j;
+      width += gm->advance   / 64;
+      casc   = gm->bbox.yMax / 64;
+      cdesc  = gm->bbox.yMin / 64;
 
       mm_log((1, "i_tt_box_inst: glyph='%c' casc=%d cdesc=%d\n", j, casc, cdesc));
 
       if (first) {
-	start    = handle->instanceh[inst].gmetrics[j].bbox.xMin / 64;
-	ascent   = handle->instanceh[inst].gmetrics[j].bbox.yMax / 64;
-	descent  = handle->instanceh[inst].gmetrics[j].bbox.yMin / 64;
+	start    = gm->bbox.xMin / 64;
+	ascent   = gm->bbox.yMax / 64;
+	descent  = gm->bbox.yMin / 64;
 	first = 0;
+      }
+      if (i == len-1) {
+	/* the right-side bearing - in case the right-side of a 
+	   character goes past the right of the advance width,
+	   as is common for italic fonts
+	*/
+	int rightb = gm->advance - gm->bearingX 
+	  - (gm->bbox.xMax - gm->bbox.xMin);
+	/* fprintf(stderr, "font info last: %d %d %d %d\n", 
+	   gm->bbox.xMax, gm->bbox.xMin, gm->advance, rightb); */
+	if (rightb < 0)
+	  width -= rightb/64;
       }
 
       ascent  = (ascent  >  casc ?  ascent : casc );
